# Sahne-Karnal-Standard-Edition

./: README.md  drivers_support.md  karnal.h  karnal64.rs  main.c  main.d  srcconsole.rs  srcmemory.rs  srcmemorygddr.rs  srcplatformgeneric.rs  srcpowerbattery.rs
config/: Cargo.toml  build.rs
src/: srcinitrd.rs  srcipc.rs  srcplatform.rs
src/arch/: srcboot_mips64.S  srcboot_openrisc64.S  srcboot_rv64g.S  srcboot_sparcv9.S
src/arch/amd64/: srcboot_amd64.S  srcdtb_amd64.rs  srcentry_amd64.asm  srcexception_amd64.rs  srcinterrupt_amd64.rs  srcio_amd64.rs  srcmmu_amd64.rs  srcpanic_amd64.rs  srcplatformmod_amd64.rs  srcpower_amd64.rs  srcsecurity_amd64.rs  srcshutdown_amd64.rs  srctask_amd64.rs  srctime_amd64.rs
src/arch/armv9/: srcdtb_armv9.rs  srcentry_armv9.asm  srcexception_armv9.rs  srcinterrupt_armv9.rs  srcio_armv9.rs  srcmmu_armv9.rs  srcpanic_armv9.rs  srcplatformmod_armv9.rs  srcpower_armv9.rs  srcsecurity_armv9.rs  srcshutdown_armv9.rs  srctask_armv9.rs  srctime_armv9.rs
src/arch/loongarch64/: srcboot_loongarch.S  srcdtb_loongarch64.rs  srcentry_loongarch64.asm  srcexception_loongarch64.rs  srcinterrupt_loongarch64.rs  srcio_loongarch64.rs  srcmmu_loongarch64.rs  srcpanic_loongarch64.rs  srcplatformmod_loongarch64.rs  srcpower_loongarch64.rs  srcsecurity_loongarch64.rs  srcshutdown_loongarch64.rs  srctask_loongarch64.rs  srctime_loongarch64.rs
src/arch/mips64/: srcdtb_mips64.rs  srcentry_mips64.asm  (+11 more)
src/karnal64/: Manual.md  hardware_specific.h  kernel_memory.h  main.cpp
src/memory/: srcmemory.rs  srcmemoryddr.rs  srcmemoryhbm.rs  srcmemorylpddr.rs
(+52 files in other folders)
